--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -2,11 +2,15 @@ $color-blue:rgb(149,225,211);
 $color-grey:rgb(248,248,248);
 $color-red: rgb(243,129,129);
 $color-yellow:rgb(252,227,138);
+$color-grey-light:rgb(217,217,217);
+$color-grey-middle:rgb(229,229,229);
 
 $gradient-bottom: RGB(252,226,138);
 $gradient-top: RGB(244,140,130);
 
-
+$md:1200px;
+$sm:992px;
+$xs:768px;
 //format("opentype");
 
 // use @import 'colors';
