--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,127 @@
+.meet .meet__title__top {
+  font-family: Kaushan Script;
+  text-align: center;
+  font-size: 2em;
+}
+.meet .meet__title__middle {
+  text-align: center;
+  font-size: 2em;
+  font-weight: bold;
+}
+.meet div {
+  text-align: center;
+}
+.meet div .meet__rectangle {
+  padding-bottom: 3%;
+  padding-top: 1%;
+}
+.meet div .meet__text {
+  color: #d9d9d9;
+  font-size: 1em;
+}
+@media only screen and (max-width: 992px) {
+  .meet div .meet__text {
+    font-size: 0.8em;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .meet div .meet__text {
+    font-size: 1em;
+  }
+}
+.meet .meet__team {
+  padding-top: 3%;
+}
+.meet .meet__team div div {
+  /* .meet__team__img:hover:after{
+     content: "tekst ";
+     display: block;
+     background: linear-gradient($color-red, $color-yellow);
+     height: 434.13px;
+     width: 351px;
+     margin-top:-459px;
+     z-index: 5;
+   }*/
+}
+.meet .meet__team div div .meet__team__img img {
+  width: 90%;
+  left: 30px;
+  margin-top: -459px;
+}
+@media only screen and (max-width: 1200px) {
+  .meet .meet__team div div .meet__team__img img {
+    margin-top: -370px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  .meet .meet__team div div .meet__team__img img {
+    margin-top: -305px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .meet .meet__team div div .meet__team__img img {
+    width: 350px;
+    margin-top: -455px;
+  }
+}
+.meet .meet__team div div .meet__team__img:before {
+  content: " ";
+  display: block;
+  width: 351px;
+  height: 434px;
+  background-color: #95e1d3;
+  margin-left: 20px;
+}
+@media only screen and (max-width: 1200px) {
+  .meet .meet__team div div .meet__team__img:before {
+    width: 285px;
+    height: 355px;
+    margin-top: 10px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  .meet .meet__team div div .meet__team__img:before {
+    width: 225px;
+    height: 280px;
+    margin-top: 10px;
+    margin-left: 15px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .meet .meet__team div div .meet__team__img:before {
+    width: 350px;
+    height: 435px;
+    margin-left: 25%;
+  }
+}
+.meet .meet__team div div .meet__team__img:hover img {
+  margin-left: -20px;
+  margin-bottom: 20px;
+  transition: .5s ease;
+}
+@media only screen and (max-width: 1200px) {
+  .meet .meet__team div div .meet__team__img:hover img {
+    margin-bottom: 30px;
+  }
+}
+.meet .meet__team div .meet__team__name {
+  font-weight: bold;
+  padding-top: 3%;
+  font-size: 1.1em;
+}
+.meet .meet__team div .meet__team__work {
+  color: #e5e5e5;
+  padding-top: 3%;
+  font-style: italic;
+  font-size: 1em;
+}
 
+.logos {
+  background-color: #f8f8f8;
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-top: 100px;
+}
+
+/*# sourceMappingURL=style.css.map */
