--- a/css/style.css
+++ b/css/style.css
@@ -124,4 +124,51 @@
   margin-top: 100px;
 }
 
+.work .work__title__top {
+  margin-top: 5%;
+  font-family: Kaushan Script;
+  text-align: center;
+  font-size: 2em;
+}
+.work .work__title__middle {
+  text-align: center;
+  font-size: 2em;
+  font-weight: bold;
+}
+.work div {
+  text-align: center;
+}
+.work div .work_rectangle {
+  padding-bottom: 3%;
+  padding-top: 1%;
+}
+.work .work__text {
+  color: #d9d9d9;
+  font-size: 1em;
+}
+.work .work__picture {
+  margin-top: 3%;
+}
+.work .work__picture div {
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
+}
+.work .work__picture div img {
+  width: 100%;
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
+}
+.work .work__picture__bottom {
+  margin-top: 3%;
+}
+.work .work__picture__bottom div {
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
+}
+.work .work__picture__bottom div img {
+  width: 100%;
+  margin: 0 0 0 0;
+  padding: 0 0 0 0;
+}
+
 /*# sourceMappingURL=style.css.map */
