--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,1 +1,5 @@
-@import '_colors.scss';
+@import '_variables.scss';
+@import '_banner.scss';
+@import '_nav.scss';
+@import '_story-about-us.scss';
+@import '_numbers.scss';
