--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,11 @@
 .navbar .navbar__img {
   content: url("../img/MoGo.png");
 }
+@media (max-width: 768px) {
+  .navbar {
+    background-color: #95e1d3;
+  }
+}
 
 #about .about__info--first {
   font-family: 'Kaushan Script', cursive;
@@ -143,6 +148,11 @@
 #about .about__gallery {
   margin-top: 5%;
   margin-bottom: 10%;
+}
+@media (max-width: 768px) {
+  #about .about__gallery div {
+    margin-bottom: 5%;
+  }
 }
 #about .about__gallery .img {
   background-repeat: no-repeat;
@@ -292,6 +302,15 @@
   border-left: 1px solid white;
   margin-left: 18.75%;
 }
+@media (max-width: 768px) {
+  #numbers .numbers__div {
+    width: 20%;
+  }
+  #numbers .numbers__div:nth-child(1) {
+    border-left: 1px solid white;
+    margin: 0;
+  }
+}
 #numbers .numbers__div span {
   display: block;
   margin: 0 auto;
@@ -303,6 +322,21 @@
   font-family: 'Montserrat', sans-serif;
   margin-top: 30%;
   font-size: 50px;
+}
+@media (max-width: 1200px) {
+  #numbers .numbers__div span.numbers__div__count {
+    font-size: 40px;
+  }
+}
+@media (max-width: 992px) {
+  #numbers .numbers__div span.numbers__div__count {
+    font-size: 40px;
+  }
+}
+@media (max-width: 768px) {
+  #numbers .numbers__div span.numbers__div__count {
+    font-size: 40px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
