--- a/sass/_logos.scss
+++ b/sass/_logos.scss
@@ -1,10 +1,19 @@
 .logos{
+  margin-top: 3%;
   background-color: $color-grey;
+  padding-top: 3%;
+  padding-bottom: 3%;
   text-align: center;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  margin-top: 100px;
-  img{
-    width: 60%;
+  div{
+    .logos__row{
+      div{
+        img{
+          @media #{$xs-screen}
+          {
+            margin-bottom: 50px;
+          }
+        }
+      }
+    }
   }
 }
