--- a/sass/_meet.scss
+++ b/sass/_meet.scss
@@ -28,7 +28,162 @@
       }
     }
   }
-  .meet__team {
+  div {
+    div {
+      .meet__team {
+
+        &--one{
+          position: relative;
+          display: inline-block;
+          overflow: hidden;
+          margin: 20px 20px 20px 20px;
+          min-width: 230px;
+          max-width: 380px;
+          width: 90%;
+          color: #ffffff;
+          font-size: 16px;
+          text-align: left;
+          display:table;
+        }
+        &--one * {
+          -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+          -webkit-transition: all 0.25s ease;
+          transition: all 0.25s ease;
+        }
+        &--one:before {
+          position: absolute;
+          top: 0px;
+          bottom: 0px;
+          left: 0px;
+          right:5%;
+          top: 100%;
+          content: '';
+          background: linear-gradient($color-red, $color-yellow);
+          -webkit-transition: all 0.25s ease;
+          transition: all 0.25s ease;
+          -webkit-transition-delay: 0.25s;
+          transition-delay: 0.25s;
+        }
+        &--one:after {
+          position: absolute;
+          top: 0px;
+          bottom: -20px;
+          left: 0px;
+          right:0;
+          top: 100%;
+          content: '';
+          background: $color-blue;
+          -webkit-transition: all 0.25s ease;
+          transition: all 0.25s ease;
+          -webkit-transition-delay: 0.25s;
+          transition-delay: 0.25s;
+          z-index: -100;
+        }
+        &--one img {
+          vertical-align: top;
+          max-width: 100%;
+          backface-visibility: hidden;
+        }
+        &--one figcaption {
+          position: absolute;
+          display: inline-block;
+          top: 45%;
+          bottom: 40%;
+          left: 0%;
+          right: 0;
+          z-index: 1;
+          align-items: center;
+          flex-direction: row;
+          justify-content: center;
+          margin-left: 0px;
+        }
+        /*&--one--pictogram,
+        &--one--pictogram{
+          margin: 0;
+          opacity: 0;
+
+          &--1 {
+            //-webkit-transform: translateY(-100%);
+            //transform: translateY(-100%);
+            padding-bottom: 10px;
+            padding-top: 10px;
+            padding-left: 15px;
+            padding-right: 15px;
+            background-color: $color-red;
+
+          }
+          &--2 {
+            //-webkit-transform: translateY(-100%);
+            //transform: translateY(-100%);
+            padding-bottom: 10px;
+            padding-top: 10px;
+            padding-left: 15px;
+            padding-right: 15px;
+            background-color: $color-yellow;
+
+          }
+        }
+
+
+        &--one:hover:before,
+        &--one.hover:before {
+          top: 0px;
+          -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+          opacity: 0.8;
+
+          &--pictogram:hover,
+          &--pictogram.hover {
+            -webkit-transform: translateY(0);
+            transform: translateY(0);
+            opacity: 1;
+          }
+        }
+        &--one:hover:after,
+        &--one.hover:after {
+          top: 20px;
+          bottom: -20px;
+          -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+          opacity: 1;
+          height: 100%;
+        }
+        &--one:hover img,
+        &--one.hover img{
+          margin-left: -20px;
+          padding-bottom: -20px;
+          transition: .5s ease;
+        }
+        &--one--pictogram:hover,
+        &--one--pictogram.hover {
+          -webkit-transition-delay: 0.5s;
+          transition-delay: 0.1s;
+          margin-left: 0px;
+          padding-bottom: 0px;
+          transition: .5s ease;
+        }*/
+        //background-image: url("../img/meet_img_1.png");
+        /* width: 100%;
+         &--back{
+           background-color: $color-blue;
+           width: 100%;
+           height: 100%;
+         }
+         &--img{
+           opacity: 0;
+
+         }
+         &--top{
+
+         }
+       }
+     }*/
+      }
+    }
+  }
+
+  /*.meet__team {
     padding-top: 3%;
     div {
       div {
@@ -118,6 +273,7 @@
             @media only screen and (max-width: $md)
             {
               margin-bottom: 30px;
+
             }
           }
         }
@@ -144,8 +300,8 @@
           width: 351px;
           margin-top:-459px;
           z-index: 5;
-        }*/
-      }
+        }
+      }*/
       .meet__team__name{
         font-weight: bold;
         padding-top: 3%;
@@ -175,6 +331,5 @@
     .meet__team__img__small--2{
 
     }
-  }
-}
+
 
