--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -4,6 +4,7 @@ $color-red: rgb(243,129,129);
 $color-yellow:rgb(252,227,138);
 $color-grey-light:rgb(217,217,217);
 $color-grey-middle:rgb(229,229,229);
+$color-grey-dark:rgb(153,153,153);
 
 $gradient-bottom: RGB(252,226,138);
 $gradient-top: RGB(244,140,130);
