--- a/css/style.css
+++ b/css/style.css
@@ -421,7 +421,6 @@
   top: 0;
   width: 100%;
   height: 100%;
-  height: auto;
   opacity: 0.1;
 }
 #banner .banner__info--first {
@@ -458,6 +457,37 @@
   margin-top: 3%;
   margin-bottom: 10%;
 }
+#banner .banner__info__button:hover {
+  border-color: #95e1d3;
+  color: #95e1d3;
+  -webkit-transition: all .5s ease-in-out;
+  -moz-transition: all .5s ease-in-out;
+  transition: all .5s ease-in-out;
+}
+#banner .banner__slider {
+  text-align: left;
+  text-transform: uppercase;
+}
+#banner .banner__slider__slide {
+  opacity: 0.6;
+  color: white;
+}
+#banner .banner__slider__slide .slide__bar {
+  border: 2px white solid;
+  width: 80%;
+  margin-left: 4%;
+  margin-bottom: 5%;
+}
+#banner .banner__slider__slide .slide__text {
+  font-size: 15px;
+  font-weight: 700;
+}
+#banner .banner__slider__slide .slide__text span {
+  font-size: 20px;
+}
+#banner .banner__slider .active-slide {
+  opacity: 1;
+}
 
 @media (max-width: 1200px) {
   .banner__info--first {
@@ -487,6 +517,16 @@
   .banner__info--second {
     font-size: 70px !important;
     line-height: 60px !important;
+  }
+}
+@media (max-width: 500px) {
+  .banner__info--first {
+    font-size: 20px !important;
+  }
+
+  .banner__info--second {
+    font-size: 40px !important;
+    line-height: 30px !important;
   }
 }
 .nav li a {
@@ -673,15 +713,6 @@
   content: url("../img/aboutus_pic1.png");
   width: 100%;
 }
-#about .about__gallery .about__gallery--first img.about__gallery__img--bg:hover ~ img.about__gallery__img--pic--1 {
-  display: inline;
-  margin-left: -10%;
-  -webkit-transition: all 0.7s ease-out;
-  -moz-transition: all 0.7s ease-out;
-  -ms-transition: all 0.7s ease-out;
-  -o-transition: all 0.7s ease-out;
-  transition: all 0.7s ease-out;
-}
 #about .about__gallery .about__gallery--first img.about__gallery__img--pic--1 {
   content: url("../img/pictograms/aboutus_pic1_icon.png");
 }
@@ -748,6 +779,96 @@
   #numbers .numbers__div span.numbers__div__count {
     font-size: 40px;
   }
+}
+
+#services {
+  margin-bottom: 5%;
+}
+#services .services__intro__text--first {
+  font-family: 'Kaushan Script', cursive;
+  font-size: 20px;
+  color: black;
+  margin-top: 5%;
+}
+#services .services__intro__text--second {
+  text-transform: uppercase;
+  font-size: 30px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  margin-top: 0;
+  color: black;
+}
+#services .services__intro__bar {
+  display: inline-block;
+  border: 2px solid #f38181;
+  width: 50px;
+  margin-top: 1.5%;
+  margin-bottom: 5%;
+}
+#services .services__gallery .row--first {
+  margin-bottom: 5%;
+}
+#services .services__gallery .row--second {
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+#services .services__gallery .left {
+  margin-left: 5%;
+}
+#services .services__gallery__block .title {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+#services .services__gallery__block .xs-bar {
+  display: inline-block;
+  border: 2px solid #e5e5e5;
+  width: 90%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+#services .services__gallery__block__pic img {
+  width: 150%;
+}
+@media (max-width: 1100px) {
+  #services .services__gallery__block__pic img {
+    width: 200%;
+  }
+}
+@media (max-width: 900px) {
+  #services .services__gallery__block__pic img {
+    width: 300%;
+  }
+}
+@media (max-width: 850px) {
+  #services .services__gallery__block__pic img {
+    width: 400%;
+  }
+}
+@media (max-width: 800px) {
+  #services .services__gallery__block__pic img {
+    width: 500%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #services .services__gallery__block__pic img {
+    width: 100%;
+  }
+}
+@media (max-width: 500px) {
+  #services .services__gallery__block__pic img {
+    width: 150%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  #services .services__gallery__block {
+    margin: 5% 0 5% 0 !important;
+  }
+}
+#services .services__gallery .middle-bar {
+  display: inline-block;
+  border: 1px solid #e5e5e5;
+  width: 90%;
+  margin-left: 5%;
 }
 
 /*# sourceMappingURL=style.css.map */
