--- a/sass/_banner.scss
+++ b/sass/_banner.scss
@@ -7,9 +7,8 @@
     position: absolute;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
-    height: auto;
+    width:100%;
+    height:100%;
     opacity: 0.1;
   }
   .banner__info--first{
@@ -45,6 +44,37 @@
     height: 40px;
     margin-top: 3%;
     margin-bottom: 10%;
+    &:hover{
+      border-color: $color-blue;
+      color: $color-blue;
+      -webkit-transition: all .5s ease-in-out;
+      -moz-transition: all .5s ease-in-out;
+      transition: all .5s ease-in-out;
+    }
+  }
+  .banner__slider{
+    text-align:left;
+    text-transform: uppercase;
+    &__slide{
+      opacity:0.6;
+      color:white;
+      .slide__bar{
+        border: 2px white solid;
+        width:80%;
+        margin-left: 4%;
+        margin-bottom: 5%;
+      }
+      .slide__text{
+        font-size: 15px;
+        font-weight: 700;
+        span{
+          font-size: 20px;
+        }
+      }
+    }
+    .active-slide{
+      opacity:1;
+    }
   }
 }
 @media(max-width:$md){
@@ -72,5 +102,14 @@
   .banner__info--second{
     font-size: 70px !important;
     line-height: 60px !important;
+  }
+}
+@media(max-width:500px){
+  .banner__info--first{
+    font-size: 20px !important;
+  }
+  .banner__info--second{
+    font-size: 40px !important;
+    line-height: 30px !important;
   }
 }
