--- a/css/style.css
+++ b/css/style.css
@@ -1078,4 +1078,38 @@
   }
 }
 
+.map {
+  position: relative;
+  overflow: hidden;
+  background-color: #f8f8f8;
+}
+.map--back {
+  content: url("../img/map_back.png");
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  height: auto;
+  opacity: 0.1;
+}
+.map__inside {
+  text-align: center;
+  opacity: 1;
+}
+.map__inside--pictogram {
+  padding-top: 2%;
+  padding-bottom: 0.5%;
+}
+.map__inside--text {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2em;
+  font-weight: bold;
+  color: #f38181;
+}
+.map__inside--rectangle {
+  width: 5%;
+  padding-bottom: 3%;
+}
+
 /*# sourceMappingURL=style.css.map */
