--- a/css/style.css
+++ b/css/style.css
@@ -1028,6 +1028,7 @@
 }
 .blog__img--pictograms {
   padding-top: 2%;
+  padding-bottom: 10%;
   opacity: 0.8;
 }
 .blog__img--pictograms span {
@@ -1055,7 +1056,7 @@
 }
 @media only screen and (max-width: 992px) {
   .blog__img--img figcaption {
-    top: 50%;
+    top: 45%;
   }
 }
 .blog__img--img--1 {
@@ -1082,6 +1083,7 @@
   position: relative;
   overflow: hidden;
   background-color: #f8f8f8;
+  height: 100%;
 }
 .map--back {
   content: url("../img/map_back.png");
@@ -1090,7 +1092,6 @@
   top: 0;
   width: 100%;
   height: 100%;
-  height: auto;
   opacity: 0.1;
 }
 .map__inside {
@@ -1132,6 +1133,11 @@
 .foot__1--line {
   margin-left: -5%;
 }
+@media only screen and (max-width: 1200px) {
+  .foot__1--line {
+    width: 100%;
+  }
+}
 .foot__1--users {
   padding-top: 7%;
 }
@@ -1150,10 +1156,15 @@
   font-family: 'Roboto', sans-serif;
   font-style: italic;
   color: #d9d9d9;
-  padding-right: 5%;
+  padding-right: 4%;
 }
 .foot__1--site img {
-  padding-right: 2%;
+  padding-right: 1.5%;
+}
+@media only screen and (max-width: 992px) {
+  .foot__1--site img {
+    padding-right: 4%;
+  }
 }
 .foot__1 form input[type=text] {
   width: 50%;
@@ -1202,7 +1213,12 @@
   font-weight: bold;
 }
 .foot__3--insta {
-  margin-left: 5%;
+  text-align: center;
+}
+@media only screen and (max-width: 1200px) {
+  .foot__3--insta {
+    margin-left: 5%;
+  }
 }
 .foot__3--insta .row {
   margin-bottom: 2%;
@@ -1210,6 +1226,11 @@
 .foot__3--text {
   padding-top: 2%;
   font-style: italic;
+}
+@media only screen and (max-width: 1200px) {
+  .foot__3--text {
+    text-align: center;
+  }
 }
 .foot__3--line {
   margin-left: -5%;
@@ -1223,6 +1244,76 @@
 }
 .foot__3--foot--color {
   color: #f38181;
+}
+
+.testimontial {
+  padding-top: 4%;
+  padding-bottom: 5%;
+}
+.testimontial__slider--left {
+  text-align: center;
+  margin-top: 5%;
+}
+@media only screen and (max-width: 768px) {
+  .testimontial__slider--left {
+    margin-top: 25%;
+  }
+}
+.testimontial__slider--right {
+  text-align: center;
+  margin-top: 3%;
+}
+@media only screen and (max-width: 768px) {
+  .testimontial__slider--right {
+    margin-top: 0%;
+  }
+}
+.testimontial__slider--page {
+  padding-top: 1%;
+}
+@media only screen and (max-width: 768px) {
+  .testimontial__slider--page {
+    padding-left: 35%;
+  }
+}
+.testimontial__slider--page--img img {
+  width: 60%;
+}
+@media only screen and (max-width: 1200px) {
+  .testimontial__slider--page--img img {
+    width: 80%;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .testimontial__slider--page--img img {
+    width: 50%;
+    text-align: center;
+  }
+}
+.testimontial__slider--page--text {
+  color: #999999;
+  font-family: 'Roboto', sans-serif;
+  font-style: italic;
+  width: 70%;
+}
+@media only screen and (max-width: 768px) {
+  .testimontial__slider--page--text {
+    width: 90%;
+    margin-top: 50px;
+    padding-left: -30%;
+    margin-left: -20%;
+  }
+}
+.testimontial__slider--page--name {
+  padding-top: 3%;
+}
+@media only screen and (max-width: 768px) {
+  .testimontial__slider--page--name {
+    margin-left: -20%;
+  }
+}
+.testimontial__slider--page--name--name {
+  font-family: 'Kaushan Script', cursive;
 }
 
 /*# sourceMappingURL=style.css.map */
