--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -56,6 +56,7 @@
     }
     &--pictograms{
       padding-top: 2%;
+      padding-bottom: 10%;
       opacity: 0.8;
       span{
         margin-left: 2%;
@@ -82,7 +83,7 @@
       }
       @media #{$sm-screen}
       {
-        top:50%;
+        top:45%;
       }
     }
     &--1{
