--- a/sass/_map.scss
+++ b/sass/_map.scss
@@ -2,6 +2,7 @@
   position: relative;
   overflow: hidden;
   background-color: $color-grey;
+  height: 100%;
   &--back {
     content:url("../img/map_back.png");
     position: absolute;
@@ -9,7 +10,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    height: auto;
+    //height: auto;
     opacity: 0.1;
   }
   &__inside{
