--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -41,16 +41,16 @@
         text-transform: uppercase;
         font-weight: bold;
       }
-      .xs-bar{
-        display:inline-block;
-        border: 2px solid $color-grey-middle;
-        width: 90%;
-        margin-top: 1%;
-        margin-bottom: 1%;
+      @media(min-width:1500px){
+        width: 30%;
+        margin-left: 1.5%;
       }
       &__pic{
         img{
           width: 150%;
+          @media(min-width:1500px){
+            width:100%;
+          }
           @media(max-width:1100px){
             width: 200%;
           }
